@@ -3,6 +3,7 @@ SVN /trunk
 ==========
 - [r142]: Fix high CPU use when no subprocesses are active
 - [r143]: Added the -p option (pid file) to ccgfs-super
+- [r144]: Added the -s option to ccgfs-super to enable syslog logging
 
 
 v0.69 (October 27 2007)
